log/build_2021-06-10_21-48-21/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p2_node[0m
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[ 25%] [32mBuilding CXX object CMakeFiles/control_pid_p2_node.dir/src/control_pid_p2_node.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp: In member function ‘void Control_PID_P2_node::save_data()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:568:14: error: ‘Xrobot1’ was not declared in this scope; did you mean ‘Xrobot2’?
  568 |    myfile << Xrobot1;
      |              ^~~~~~~
      |              Xrobot2
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:570:14: error: ‘Yrobot1’ was not declared in this scope; did you mean ‘Yrobot2’?
  570 |    myfile << Yrobot1;
      |              ^~~~~~~
      |              Yrobot2
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:572:14: error: ‘ANGrobot1’ was not declared in this scope; did you mean ‘ANGrobot2’?
  572 |    myfile << ANGrobot1;
      |              ^~~~~~~~~
      |              ANGrobot2
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:574:14: error: ‘Xobj1’ was not declared in this scope; did you mean ‘Xobj2’?
  574 |    myfile << Xobj1;
      |              ^~~~~
      |              Xobj2
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:576:14: error: ‘Yobj1’ was not declared in this scope; did you mean ‘Yobj2’?
  576 |    myfile << Yobj1;
      |              ^~~~~
      |              Yobj2
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p2_node.cpp:578:14: error: ‘ANGobj1’ was not declared in this scope; did you mean ‘ANGobj2’?
  578 |    myfile << ANGobj1;
      |              ^~~~~~~
      |              ANGobj2
make[2]: *** [CMakeFiles/control_pid_p2_node.dir/build.make:63: CMakeFiles/control_pid_p2_node.dir/src/control_pid_p2_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/control_pid_p2_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 75%] [32m[1mLinking CXX executable control_pid_p1_node[0m
[ 75%] Built target control_pid_p1_node
make: *** [Makefile:141: all] Error 2
